Starting to make massive layout changes to match what I had working for 3.0. Still a work in progress. The layout breaks a lot of things at the moment, but fixes will follow tomorrow. Also doing side research on PHP based server side script to allow actual download of files.

--- a/styles.css
+++ b/styles.css
@@ -45,22 +45,47 @@ tr,td {
 
 textarea { resize: none; }
 
-#bodyTable {
-	width:100%;
-	height:100%;
-	margin:0;
-	padding:0;
+#allContainer {
+    width: 100%;
+    height: 100%;
 }
 
+#mainContainer {
+    float: left;
+    min-width: 800px; // temporary
+}
 
-#canvasTD {
-	margin:0;
-	padding:0;
-	height:100%;
+#topContainer {
+    width: 100%;
+    height: 50px;
+    border: thin grey solid; // temporary
+}
+
+#menuButtonsContainer {
+    padding-top: 8px;
+    padding-left: 3px;
+    display: inline-block;
+}
+
+#topToolbarContainer {
+    display: inline-block;
+}
+
+#graphicsContainer {
+    overflow: auto;
+    min-height: 500px;
+    height: 500px;
+    border: thin red solid; // temporary
+}
+
+#sidebarContainer {
+    float: right;
+    width: 270px;
+    height: 100%;
 }
 
 #canvasDiv {
-	height:100%;
+	height:1000px;
 	background: white;
 	padding:0;
 	margin:0;
@@ -91,7 +116,7 @@ textarea { resize: none; }
 	margin:0px;
 	margin-bottom:5px;
 	padding:0px;
-	width:201px;
+	width:251px;
 	text-align:center;
 }
 
